[package]
name = "imgcut"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
image = "0.24.4"
thiserror = "1.0"
walkdir = "2.3.2"
serde_json = "1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
